// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new request body has correct commands 1`] = `
Object {
  "commands": Array [],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "7cd233ea671911f3",
      "getJsonBodyToPreview": [Function],
      "location": DiffLocation {
        "descriptor": Object {
          "contentType": "application/json",
          "type": "path_request",
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "request observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "assertion": Array [],
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "application/json Request",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "Request",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`new response body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6667",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
        "shapeId": "shape_6668",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6669",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6670",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
        "shapeId": "shape_6676",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$optional",
        "name": "",
        "shapeId": "shape_6672",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$optionalInner",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6670",
              },
            },
            "shapeId": "shape_6672",
          },
        },
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6671",
        "name": "dueDate",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6671",
            "shapeId": "shape_6672",
          },
        },
        "shapeId": "shape_6676",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6673",
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6673",
            "shapeId": "shape_6669",
          },
        },
        "shapeId": "shape_6676",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6674",
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6674",
            "shapeId": "shape_6668",
          },
        },
        "shapeId": "shape_6676",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6675",
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6675",
            "shapeId": "shape_6667",
          },
        },
        "shapeId": "shape_6676",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
        "shapeId": "shape_6677",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6676",
              },
            },
            "shapeId": "shape_6677",
          },
        },
      },
    },
    Object {
      "AddResponseByPathAndMethod": Object {
        "httpMethod": "GET",
        "httpStatusCode": 200,
        "pathId": "path_it2OyjUysW",
        "responseId": "response_6678",
      },
    },
    Object {
      "SetResponseBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
          "shapeId": "shape_6677",
        },
        "responseId": "response_6678",
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "8e2f42b9dd555282",
      "getJsonBodyToPreview": [Function],
      "location": DiffLocation {
        "descriptor": Object {
          "contentType": "application/json",
          "statusCode": 200,
          "type": "path_response",
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "response with",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "assertion": Array [],
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "200 application/json Response",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "Response",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`spec with paths, and new bodies 1`] = `Array []`;
